# Ray-Tracing-Graphics

./: CMakeLists.txt  README.md
src/: Box.cpp  Box.h  Plane.cpp  Plane.h  Pointsource.cpp  Pointsource.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  SoftwareRasterization.cpp  Sphere.cpp  Sphere.h  headers.h  main.cpp
